feat: implement estimated reading time for posts - rename `content/date` template to `datetime` and add reading time area - implement `reading-time.js` with multi-language support (Latin, Asian) - add custom reading time logic for code blocks, tables, images, and media - integrate i18n for localized reading time formats across all supported languages

--- a/i18n/am.yaml
+++ b/i18n/am.yaml
@@ -82,5 +82,14 @@
 - id: "Date Format"
   translation: "02/01/2006"
 
+- id: "Read Format Hour"
+  translation: "%h ሰዓት %m ደቂቃ ንባብ"
+
+- id: "Read Format Min"
+  translation: "%m ደቂቃ ንባብ"
+
+- id: "Read Format Sec"
+  translation: "%s ሰከንድ ንባብ"
+
 - id: "searchConfig"
   translation: "{ cache: true }"
