--- a/i18n/nl.yaml
+++ b/i18n/nl.yaml
@@ -82,5 +82,14 @@
 - id: "Date Format"
   translation: "02-01-2006"
 
+- id: "Read Format Hour"
+  translation: "%h u %m min leestijd"
+
+- id: "Read Format Min"
+  translation: "%m min leestijd"
+
+- id: "Read Format Sec"
+  translation: "%s sec leestijd"
+
 - id: "searchConfig"
   translation: "searchConfig"
