--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -82,5 +82,14 @@
 - id: "Date Format"
   translation: "02/01/2006"
 
+- id: "Read Format Hour"
+  translation: "%h h %m min de lecture"
+
+- id: "Read Format Min"
+  translation: "%m min de lecture"
+
+- id: "Read Format Sec"
+  translation: "%s s de lecture"
+
 - id: "searchConfig"
   translation: "searchConfig"
