--- a/i18n/it.yaml
+++ b/i18n/it.yaml
@@ -82,5 +82,14 @@
 - id: "Date Format"
   translation: "02/01/2006"
 
+- id: "Read Format Hour"
+  translation: "%h h %m min di lettura"
+
+- id: "Read Format Min"
+  translation: "%m min di lettura"
+
+- id: "Read Format Sec"
+  translation: "%s sec di lettura"
+
 - id: "searchConfig"
   translation: "searchConfig"
