--- a/i18n/pt-BR.yaml
+++ b/i18n/pt-BR.yaml
@@ -82,5 +82,14 @@
 - id: "Date Format"
   translation: "02/01/2006"
 
+- id: "Read Format Hour"
+  translation: "%h h %m min de leitura"
+
+- id: "Read Format Min"
+  translation: "%m min de lectura"
+
+- id: "Read Format Sec"
+  translation: "%s s de lectura"
+
 - id: "searchConfig"
   translation: "searchConfig"
