--- a/i18n/sv.yaml
+++ b/i18n/sv.yaml
@@ -82,5 +82,14 @@
 - id: "Date Format"
   translation: "2006-01-02"
 
+- id: "Read Format Hour"
+  translation: "%h t %m min lästid"
+
+- id: "Read Format Min"
+  translation: "%m min lästid"
+
+- id: "Read Format Sec"
+  translation: "%s sek lästid"
+
 - id: "searchConfig"
   translation: "searchConfig"
