--- a/i18n/uk.yaml
+++ b/i18n/uk.yaml
@@ -82,5 +82,14 @@
 - id: "Date Format"
   translation: "02.01.2006"
 
+- id: "Read Format Hour"
+  translation: "%h год %m хв читання"
+
+- id: "Read Format Min"
+  translation: "%m хв читання"
+
+- id: "Read Format Sec"
+  translation: "%s сек читання"
+
 - id: "searchConfig"
   translation: "searchConfig"
