--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -82,5 +82,14 @@
 - id: "Date Format"
   translation: "2006年01月02日"
 
+- id: "Read Format Hour"
+  translation: "%h小时%m分钟阅读"
+
+- id: "Read Format Min"
+  translation: "%m分钟阅读"
+
+- id: "Read Format Sec"
+  translation: "%s秒阅读"
+
 - id: "searchConfig"
   translation: "searchConfig"
