feat: implement search modal with mobile integration - replace inline search preview with full-screen modal overlay - integrate search into mobile header, replacing site title - add Toss-inspired sidebar search UI with keyboard shortcut guide - add i18n support for search UI across all supported languages

--- a/i18n/am.yaml
+++ b/i18n/am.yaml
@@ -52,11 +52,17 @@
 - id: "Tags"
   translation: "መለያዎች"
 
-- id: "Tags List"
-  translation: "የመለያዎች ዝርዝር"
+- id: "Hide"
+  translation: "ደብቅ"
+
+- id: "Show"
+  translation: "ዝርዝር አሳይ"
 
 - id: "Search"
   translation: "ፈልግ"
+
+- id: "Search Input"
+  translation: "ልማፍሌግ `/` ይጫኑ"
 
 - id: "Search Results"
   translation: "የፍለጋ ውጤቶች"
