--- a/i18n/bn.yaml
+++ b/i18n/bn.yaml
@@ -52,11 +52,17 @@
 - id: "Tags"
   translation: "ট্যাগ"
 
-- id: "Tags List"
-  translation: "ট্যাগ তালিকা"
+- id: "Hide"
+  translation: "লুকান"
+
+- id: "Show"
+  translation: "তালিকা দেখান"
 
 - id: "Search"
   translation: "অনুসন্ধান"
+
+- id: "Search Input"
+  translation: "অনুসন্ধানের জন্য `/` চাপুন"
 
 - id: "Search Results"
   translation: "অনুসন্ধান ফলাফল"
