--- a/i18n/it.yaml
+++ b/i18n/it.yaml
@@ -52,11 +52,17 @@
 - id: "Tags"
   translation: "Tag"
 
-- id: "Tags List"
-  translation: "Elenco tag"
+- id: "Hide"
+  translation: "Nascondi"
+
+- id: "Show"
+  translation: "Mostra elenco"
 
 - id: "Search"
   translation: "Cerca"
+
+- id: "Search Input"
+  translation: "Premi `/` per cercare"
 
 - id: "Search Results"
   translation: "Risultati della ricerca"
